// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> toMatchSnapshot: Badge 1`] = `
<div>
  <span
    className="sc-bxivhb blaiqS"
  >
    <strong
      className="sc-ifAKCX JjZUs"
    >
      Address
    </strong>
  </span>
</div>
`;

exports[`<Badge /> toMatchSnapshot: Label 1`] = `
<div>
  <span
    className="sc-bZQynM deVMPx"
  >
    <span
      className="sc-htoDjs bznlDS"
    />
    <strong
      className="sc-gzVnrw gQVXV"
    >
      Address
    </strong>
  </span>
</div>
`;
